--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -24,6 +24,10 @@ android {
 }
 
 dependencies {
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
